<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园通</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="home_work">家庭作业</string>
    <string name="system_note">校园通知</string>
    <string name="attendance_information">考勤信息</string>
    <string name="official_site">官方网站</string>
    <string name="change_password">修改密码</string>
    <string name="position_orientation">位置定位 </string>
    <string name="confirm_login">登陆</string>
    <string name="exit_account">退出账号</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登陆</string>
    <string name="loading_school">正在获取学校，请等待...</string>
    <string name="now_logining">正在登陆...</string>
    <string name="input_accont">请输入账户</string>
    <string name="input_password">请输入密码</string>
    <string name="teacher_authority">教师权限登录</string>
    <string name="parent_authority">家长权限登录</string>
    <string name="server_time_out">响应超时</string>
    <string name="request_time_out">请求超时</string>
    <string name="connection_server_error">连接服务器错误</string>
    <string name="connection_error">连接错误</string>
    <string name="not_network">网络不可用请检查网络</string>
    <string name="now_geting_studentinfo">正在获取学生信息..</string>
     <string name="now_geting_childinfo">正在获取孩子信息...</string>
       <string name="now_geting_parentinfo">正在获取家长信息..</string>
     <string name="now_geting_techerinfo">正在获取老师信息...</string>
    <string name="now_geting_gradeinfo">正在获取年纪信息...</string>
    <string name="now_geting_subjectinfo">正在获取科目信息...</string>
    <string name="now_geting_classinfo">正在获取班级信息...</string>
    <string name="now_adding_homework">正在添加家庭作业...</string>
    <string name="now_adding_notice">正在添加校园通知...</string>
    <string name="select_school">请选择学校</string>
    <string name="no_school">没有学校</string>
    <string name="please_check_child">请选择孩子</string>
    <string name="no_child">没有孩子</string>
    <string name="please_check_teacher">请选择老师</string>
    <string name="no_teacher">没有老师</string>
    <string name="please_check_parent">请选择家长</string>
    <string name="no_parent">没有家长</string>
    <string name="select_class">请选择班级</string>
    <string name="no_class">没有班级</string>
    <string name="select_grade">请选择年级</string>
    <string name="mast_selet_one">请至少选择一个条件</string>
    <string name="select_send_type">请选择发送类型</string>
    <string name="no_grade">没有年纪</string>
    <string name="select_student">请选择学生</string>
    <string name="no_student">没有学生</string>
    <string name="select_subject">请选择科目</string>
    <string name="no_subject">没有科目</string>
    <string name="input_old_password">输入旧密码： </string>
    <string name="input_new_password">输入新密码： </string>
    <string name="input_new_password_again">输入新密码： </string>
    <string name="now_modiy_password">正在修改密码...</string>
    <string name="now_modiy_attendance">正在修改考勤信息...</string>
    <string name="modiy_attendance_sucess">修改考勤信息成功...</string>
    <string name="modify_password_sucess">修改密码成功 </string>
    <string name="now_loading_locaton">正在加载位置信息...</string>
    <string name="not_location_data">没有位置信息</string>
    <string name="exit_app">退出应用?</string>
    <string name="ok_exit_app">确定</string>
    <string name="cancel_exit_app">取消</string>
    <string name="no_bound_phone">该学生没有绑定设备</string>
    <string name="no_home_work_data">没有家庭作业</string>
    <string name="no_attendanceinfo_data">没有考勤信息</string>
    <string name="no_campus_notice_data">没有校园通知</string>
    <string name="edit_homewok_title">输入标题</string>
    <string name="edit_homewok_hint">点此录入信息正文</string>
    <string name="select_time">请选择时间</string>
    <string name="please_input_content">请输入内容</string>
    <string name="now_loading_grade">正在加载年级信息...</string>
    <string name="now_loading_class">正在加载班级息...</string>
    <string name="now_loading_student">正在加载学生信息...</string>
    <string name="no_data">没有数据</string>
    <string name="into_school">进校</string>
    <string name="out_school">离校</string>
    <string name="unkown_time">未知</string>
    <string name="student_name">学生姓名</string>
    <string name="att_time">出入时间</string>
    <string name="readed">已读</string>
    <string name="unread">未读</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="all_parent">全校家长</string>
    <string name="select_parent">指定发送</string>
    <string name="location_time">时间：</string>
    <string name="location_address">位置：</string>
    <string name="title_activity_attendance_info">AttendanceInfoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_work">HomeWorkActivity</string>
    <string name="title_activity_location_info">LocationInfoActivity</string>
    <string name="title_activity_campus_notice">CampusNoticeActivity</string>
    <string name="title_activity_modify_pass_word">ModifyPassWordActivity</string>
    <string name="title_activity_official_site">OfficialSiteActivity</string>
    <string name="title_activity_edit_home_work">EditHomeWorkActivity</string>
    <string name="title_activity_edit_campus_notice">EditCampusNoticeActivity</string>
    <string name="title_activity_home_work_detail">HomeWorkDetailActivity</string>
    <string name="title_activity_search_message">SearchMessageActivity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">大于6位小于12位的密码</string>
    <string name="input_valid_password">请输入大于6位小于12位的密码</string>
    <string name="old_password_not_empty">旧密码不能为空</string>
    <string name="new_password_not_empty">新密码不能为空</string>
    <string name="two_password_not_sample">两次新密码不一致请重新输入</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="send_time">发布时间：</string>
    <string name="send_name">老师：</string>
    <string name="now_location">实时定位</string>
    <string name="history_location">轨迹回放</string>
    <string name="send_command">命令已下发，请稍后查询</string>
    <string name="leave_message">留言信息</string>
    <string name="inner_message">校园短信</string>
    <string name="message_sender">发送者</string>
    <string name="message_resever">接收者</string>
    <string name="select_search_type">选择类型</string>
     <string name="search_type_all">全部</string>
     <string name="search_type_sender">发件箱</string>
     <string name="search_type_receiver">收件箱</string>
    <string name="select_start_time">请选择开始时间</string>
    <string name="select_end_time">请选择结束时间</string>
    

</resources>