<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_page"
    android:orientation="vertical" >

    <include layout="@layout/home_page_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/stu_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="4dp"
                android:text="@string/student_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/password_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@id/stu_name"
                android:background="@drawable/dividing_line" />

            <TextView
                android:id="@+id/stu_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/password_line"
                android:paddingLeft="4dp"
                android:text="@string/student_name" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/att_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="4dp"
                android:text="@string/att_time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/password_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@id/att_time"
                android:background="@drawable/dividing_line" />

            <TextView
                android:id="@+id/att_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/password_line"
                android:paddingLeft="4dp"
                android:text="@string/student_name" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/in_out_school"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_into_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:textColor="@android:color/darker_gray"
                android:onClick="onRadioButtonClicked"
                android:text="@string/into_school" />

            <RadioButton
                android:id="@+id/radio_out_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:textColor="@android:color/darker_gray"
                android:onClick="onRadioButtonClicked"
                android:text="@string/out_school" />

            <RadioButton
                android:id="@+id/radio_unkown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textColor="@android:color/darker_gray"
                android:layout_weight="1.0"
                android:onClick="onRadioButtonClicked"
                android:text="@string/unkown_time" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/edit_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/login_button_selector"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/edit_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/login_button_selector"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>