<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b0000000"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:background="#0000"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/select_grade_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="6dp"
				android:textColor="@android:color/background_dark"
                android:paddingLeft="4dp"
                android:text="@string/select_grade"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/select_grade_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/chooseschool_down"
                 />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/select_class_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                 android:layout_marginLeft="6dp"
				android:textColor="@android:color/background_dark"
                android:paddingLeft="4dp"
                android:text="@string/select_class"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/select_class_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/chooseschool_down" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/select_student_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                 android:layout_marginLeft="6dp"
                 android:textColor="@android:color/background_dark"
                android:paddingLeft="4dp"
                android:text="@string/select_student"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/select_student_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/chooseschool_down" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/select_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                 android:layout_marginLeft="6dp"
                 android:textColor="@android:color/background_dark"
                android:paddingLeft="4dp"
                android:text="@string/select_time"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/select_time_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/chooseschool_down" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0000"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/sreach_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/login_button_selector"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/sreach_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/login_button_selector"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>