<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context="com.dingxi.xiaoyuantong.LoginActivity" >

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/teacher_auth_selector"
            android:button="@null"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radio_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_weight="1.0"
            android:background="@drawable/parent_auth_selector"
            android:button="@null"
            android:onClick="onRadioButtonClicked" />
    </RadioGroup>

    <TextView
        android:id="@+id/who_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_dark"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp" />

    <!-- Login form -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_background"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/username_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/username" />

        <TextView
            android:id="@+id/username_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/username_icon"
            android:background="@drawable/dividing_line" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/username_line"
            android:background="@android:color/transparent"
            android:hint="@string/input_accont"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_background"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/password" />

        <TextView
            android:id="@+id/password_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/password_icon"
            android:background="@drawable/dividing_line" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/password_line"
            android:background="@android:color/transparent"
            android:hint="@string/error_invalid_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <CheckBox
            android:id="@+id/remember_password_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_dark"
            android:onClick="onCheckBoxButtonClicked"
            android:text="@string/remember_password" />

        <CheckBox
            android:id="@+id/auto_login_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_dark"
            android:layout_alignParentRight="true"
            android:onClick="onCheckBoxButtonClicked"
            android:text="@string/auto_login" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/confirm_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_selector"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/cancel_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/login_button_selector"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>